--- a/loan-service/pom.xml
+++ b/loan-service/pom.xml
@@ -4,21 +4,16 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.4.RELEASE</version>
-		<relativePath />
+		<groupId>com.cts.mc.bankmanagement</groupId>
+		<artifactId>bankmanagement</artifactId>
+		<version>1.0-SNAPSHOT</version>
+		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.cts.mc.bankmanagement</groupId>
+
 	<artifactId>loan-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>loan-service</name>
 	<description>Application to manage loan requests</description>
-
-	<properties>
-		<java.version>1.8</java.version>
-		<spring-cloud.version>Hoxton.SR8</spring-cloud.version>
-	</properties>
 
 	<dependencies>
 		<dependency>
@@ -91,18 +86,6 @@
 			</exclusions>
 		</dependency>
 	</dependencies>
-
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>${spring-cloud.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
 
 	<build>
 		<plugins>
