--- a/api-gateway/.github/workflows/main.yml
+++ b/api-gateway/.github/workflows/main.yml
@@ -33,4 +33,4 @@ jobs:
       run: |
         az configure --defaults group=$GROUP
         az configure --defaults spring-cloud=$SERVICE_NAME
-        az spring-cloud app deploy -n api-gateway --jar-path ${{ github.workspace }}/api-gateway/target/api-gateway-0.0.1-SNAPSHOT.jar
+        az spring-cloud app deploy -n api-gateway --jar-path ${{ github.workspace }}/target/api-gateway-0.0.1-SNAPSHOT.jar
