--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -3,10 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.cts.mc.bankmanagement</groupId>
-		<artifactId>bankmanagement</artifactId>
-		<version>1.0-SNAPSHOT</version>
-		<relativePath>../bankmanagement/pom.xml</relativePath> <!-- lookup parent from repository -->
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.3.4.RELEASE</version>
 	</parent>
 
 	<artifactId>api-gateway</artifactId>
