added cicd in api-gateway

--- a/app-config/user-service-cloud.yml
+++ b/app-config/user-service-cloud.yml
@@ -27,4 +27,7 @@ management:
         - GET
         allowed-origins:
         - "*"
-      
+
+app:
+  security:
+    checkTokenUrl: http://localhost:9999/oauth/check_token      
