--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.3.4.RELEASE</version>
+		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
@@ -35,10 +36,10 @@
 	<modules>
 		<module>api-gateway</module>
 		<!-- <module>config-server</module>
-		<module>service-discovery</module>
+		<module>service-discovery</module> -->
 		<module>auth-server</module>
 		<module>user-service</module>
-		<module>loan-service</module> -->
+		<module>loan-service</module>
 	</modules>
 
 </project>
