--- a/app-config/api-gateway-cloud.yml
+++ b/app-config/api-gateway-cloud.yml
@@ -29,4 +29,6 @@ management:
         - GET
         allowed-origins:
         - "*"
-
+app:
+  security:
+    checkTokenUrl: https://bank-management-service-auth-server.azuremicroservices.io/oauth/check_token
