--- a/app-config/loan-service-cloud.yml
+++ b/app-config/loan-service-cloud.yml
@@ -28,4 +28,6 @@ management:
         allowed-origins:
         - "*"
       
-
+app:
+  security:
+    checkTokenUrl: http://localhost:9999/oauth/check_token   
