--- a/app-config/user-service-cloud.yml
+++ b/app-config/user-service-cloud.yml
@@ -3,8 +3,8 @@ spring:
     name: user-service
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://bank-management.mysql.database.azure.com:3306/user-service?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-    username: dbadmin@bank-management
+    url: jdbc:mysql://bank-management-db.mysql.database.azure.com:3306/user-service?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+    username: bms_admin@bank-management-db
     password: P@ssw0rd
   jpa:
     database: mysql
@@ -30,4 +30,4 @@ management:
 
 app:
   security:
-    checkTokenUrl: http://localhost:9999/oauth/check_token      
+    checkTokenUrl: https://bank-management-service-auth-server.azuremicroservices.io/oauth/check_token     
